[tool.poetry]
name = "glearn24_cerbos"
version = "0.3.0"
description = ""
authors = ["Amin Jamal <includeamin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
dataclasses-json = ">=0.5.7"
requests-toolbelt = ">=0.9.1"
httpx = { version = ">=0.22.0", extras = ["http2"] }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
